--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -42,7 +42,6 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run migrations
@@ -51,4 +50,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python manage.py test
+        python manage.py test home
