--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  test:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,4 +31,25 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python manage.py test home
+        python manage.py test home.tests
+
+  graphic-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+
+    - name: Run unit tests
+      run: |
+        python manage.py test home.tests_selenium
