--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -93,4 +93,4 @@ jobs:
 
     - name: Run integration tests
       run: |
-        python manage.py test home.tests_selenium
+        python manage.py test home.tests_integration
