--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -2,11 +2,11 @@ name: Django CI
 
 on:
   push:
-    branches:
-      - main
+    branches-ignore:
+      - none  # Ignorer toutes les branches spécifiques
   pull_request:
     branches:
-      - main
+      - '*'  # Déclencher les pull requests pour toutes les branches
 
 jobs:
   setup:
@@ -94,3 +94,30 @@ jobs:
     - name: Run integration tests
       run: |
         python manage.py test home.tests_integration
+
+   dockerize-and-publish:
+    runs-on: ubuntu-latest
+    needs: integration-tests
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker buildx create --name mybuilder
+          docker buildx use mybuilder
+          docker buildx inspect --bootstrap
+          docker buildx build --platform linux/amd64 -t louisalr/integration-test:${{ IMAGE_TAG }} .
+          docker push louisalr/integration-test:${{ IMAGE_TAG }}
