--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -113,11 +113,9 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build and push Docker image
-        env:
-          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker buildx create --name mybuilder
           docker buildx use mybuilder
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64 -t louisalr/integration-test:${{ IMAGE_TAG }} .
-          docker push louisalr/integration-test:${{ IMAGE_TAG }}
+          docker buildx build --platform linux/amd64 -t louisalr/integration-test:1.0 .
+          docker push louisalr/integration-test:1.0
