--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -117,5 +117,4 @@ jobs:
           docker buildx create --name mybuilder
           docker buildx use mybuilder
           docker buildx inspect --bootstrap
-          docker buildx build --platform linux/amd64 -t louisalr/integration-test:1.0 .
-          docker push louisalr/integration-test:1.0
+          docker buildx build --platform linux/amd64 -t louisalr/integration-test:1.0 --push .
