--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - production  # Ajoutez la branche 'production' ici
   pull_request:
     branches:
       - main
@@ -98,6 +99,7 @@ jobs:
   dockerize-and-publish:
     runs-on: ubuntu-latest
     needs: integration-tests
+    if: github.event_name == 'push' && github.ref == 'refs/heads/production'  # Condition pour exécuter uniquement sur 'production'
 
     steps:
       - name: Checkout code
