--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -54,6 +54,27 @@ jobs:
         run: |
           python manage.py test home.tests
 
+   unit-form-test:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run unit tests
+        run: |
+          python manage.py test home.tests_registrationForm
+
   graphic-tests:
     runs-on: ubuntu-latest
     needs: setup
